# wbweb

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
.claude/agents/: test-driven-designer.md
analysis/: structure_analyzer.py  wbgpt_analysis.json
docs/: ARCHITECTURE.md  COMPONENTS.md  DEVELOPMENT_PRINCIPLES.md  DOCUMENTATION_PRINCIPLES.md  EXTRACTION_PLAN.md  LESSONS_LEARNED.md
docs/integrate-wbweb-to-wbgpt/: CLEANUP_PLAN.md  PLAN.md  PROGRESS.md
docs/task-extract-wbgpt-core/: PLAN.md  PROGRESS.md
tests/: __init__.py  conftest.py  test_config_fallback.py  test_content_negotiator.py  test_database_base.py  test_database_config.py  test_external_config_api.py  test_extraction_verification.py  test_file_level_regression.py  test_hiccup_renderer.py  test_integrated_config_proxy.py  test_managers.py  test_regression_wbgpt.py  test_renderers.py  test_settings_partial_override.py  test_settings_proxy_override.py  test_simple_regression.py  test_web_decorators.py
wbweb/: __init__.py  config.py
wbweb/core/: __init__.py
wbweb/core/auth/: __init__.py  permissions.py  policies.py
wbweb/core/config/: __init__.py  defaults.py  settings.py
wbweb/core/database/: __init__.py  base.py  config.py  engine_factory.py  managers.py  session_context.py
wbweb/core/templates/: __init__.py  hiccup.py  renderers.py
wbweb/core/utils/: __init__.py  proxy.py
wbweb/core/web/: __init__.py  decorators.py  negotiation.py
