[project]
name = "wbweb"
version = "0.1.0"
description = "A general-purpose web framework for Warmblood Co., Ltd."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.20.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=0.21.0",
]
